# white-label-gateway

./: .gitignore  Dockerfile  README.md  deploy-to-github.ps1  docker-compose.override.yml  docker-compose.yml  env.example  mixed_test.py  pyproject.toml  render.yaml  update_dependencies.ps1
.github/workflows/: ci.yml  tests.yml
diagrams/: architecture.mmd  database_schema.mmd  monitoring.mmd  payment_dfd.mmd  payment_dfd_detailed.mmd  payment_dfd_level0.mmd  payment_dfd_level1.mmd  payment_flow.mmd
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js  merchants.js  payments.js
frontend/src/components/: MerchantPanel.jsx  Merchants.jsx  Monitoring.jsx  PaymentForm.jsx  Payments.jsx  Ports.jsx  Providers.jsx
monitoring/grafana/dashboards/: payment-gateway-sre.json
monitoring/grafana/provisioning/dashboards/: default.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
services/fraud-service/: Dockerfile  README.md  pyproject.toml
services/fraud-service/src/fraud_service/: __init__.py  config.py  main.py
services/fraud-service/src/fraud_service/api/: __init__.py  fraud.py
services/fraud-service/tests/: __init__.py  test_main.py
services/gateway/: Dockerfile  README.md  pyproject.toml
services/gateway/src/gateway/: __init__.py  audit.py  config.py  deps.py  main.py  middlewares.py  router.py
services/gateway/src/gateway/api/: __init__.py  merchants.py  mock.py  payments.py
services/gateway/tests/: __init__.py  test_main.py
services/merchant-service/: Dockerfile  README.md  pyproject.toml
services/merchant-service/src/merchant_service/: __init__.py  config.py  deps.py  main.py  models.py  schemas.py
services/merchant-service/src/merchant_service/api/: __init__.py  dashboard.py  merchants.py
services/merchant-service/tests/: __init__.py  test_main.py
services/notification-service/: Dockerfile  README.md  pyproject.toml
services/notification-service/src/notification_service/: __init__.py  config.py  consumer.py  email.py  main.py  models.py  retry.py  webhook.py
services/notification-service/src/notification_service/api/: __init__.py  notifications.py
services/notification-service/tests/: __init__.py  test_main.py
services/payment-service/: Dockerfile  README.md  pyproject.toml
services/payment-service/src/payment_service/: __init__.py  config.py  deps.py  integrations.py  main.py  repository.py
services/payment-service/src/payment_service/api/: __init__.py  payments.py  providers.py
services/payment-service/src/payment_service/core/: __init__.py  mock_providers.py
services/payment-service/static/: mock-3ds.html  mock-success.html
services/payment-service/tests/: __init__.py  test_main.py
shared/: README.md  pyproject.toml
shared/src/shared/: __init__.py  config.py  database.py  exceptions.py  metrics.py  middleware.py  models.py  redis.py  schemas.py  settings.py
shared/src/shared/models/: __init__.py  db.py  merchant.py  payment.py
shared/src/shared/utils/: auth.py  logger.py
tests/: __init__.py  conftest.py
tests/e2e/: test_playwright_e2e.py
tests/integration/: test_database_integration.py  test_redis_integration.py
tests/unit/: test_gateway_audit.py  test_gateway_config.py  test_gateway_deps.py  test_gateway_main.py  test_gateway_payments_helpers.py  test_gateway_router.py  test_gateway_routes.py  test_merchant_dashboard.py  test_merchant_deps.py  test_merchant_service_merchants_extended.py  test_merchant_service_routes.py  test_mock_providers.py  test_models.py  test_payment_integrations.py  test_payment_repository.py  test_payment_service_payments_extended.py  test_payment_service_routes.py  test_shared_database.py  test_shared_logger.py  test_shared_redis.py
