[tool.poetry]
name = "white-label-gateway"
version = "0.1.0"
description = "White-label payment gateway with microservices architecture"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Shared module
shared = {path = "shared", develop = true}
# Services (optional, can be installed separately)
gateway = {path = "services/gateway", develop = true}
merchant-service = {path = "services/merchant-service", develop = true}
payment-service = {path = "services/payment-service", develop = true}
notification-service = {path = "services/notification-service", develop = true}
fraud-service = {path = "services/fraud-service", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-timeout = "^2.2.0"
httpx = ">=0.27,<0.28"
playwright = "^1.40.0"
testcontainers = {extras = ["postgres", "redis"], version = "^4.5.0"}
psycopg2-binary = "^2.9.0"
aiosqlite = "^0.19.0"
black = "^24.0.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=shared --cov=services --cov-report=html --cov-report=term-missing --cov-report=xml --cov-fail-under=90"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

